test/should-fail/jfxc3468b/pak2/B.visage
/**
 * @subtest
 */
package jfxc3468b.pak2;

import jfxc3468b.pak1.A;

public class B extends A{}

public class B2 extends A.A2 {};
